// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlideContent renders SlideContent with props 1`] = `
<section
  className="slide-content"
>
  <p>
    Reading provides you with wisdom.
  </p>
  <h1
    className="title"
  >
    Keep Reading
  </h1>
  <Link
    className="link-button"
    to="/store"
  >
    See More
  </Link>
</section>
`;

exports[`SlideContent renders empty SlideContent 1`] = `
<section
  className="slide-content"
>
  <p />
  <h1
    className="title"
  />
  <Link
    className="link-button"
    to="/store"
  >
    See More
  </Link>
</section>
`;
